# codebase-index

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  github_prompt.md  install.ps1  install.sh  installer_prompt.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.claude/skills/codebase-index/: SKILL.md
.codex/skills/codebase-index/: SKILL.md
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  skill_listing_request.yml
.github/workflows/: ci.yml  release.yml
.opencode/commands/: codebase-index.md
.opencode/skills/codebase-index/: SKILL.md
adapters/: claude.ps1  claude.sh  codex.ps1  codex.sh  opencode.ps1  opencode.sh
docs/: ARCHITECTURE.md  BENCHMARKS.md  COMPARISON.md  DATABASE_SCHEMA.md  FAQ.md  INSTALLATION.md  LANGUAGES.md  MCP.md  PRODUCT_UPGRADE_PLAN.md  QUICKSTART.md  RELEASE_CHECKLIST.md  RETRIEVAL.md  RETRIEVAL_PIPELINE.md  ROADMAP.md  SCHEMA.md  SECURITY.md  SECURITY_MODEL.md  SEO.md  SKILL_DESIGN.md  installer.md
docs/superpowers/plans/: 2026-05-29-benchmark-index-improvements.md  2026-05-29-generalize-skill-research-discipline.md  2026-05-29-m1-storage-discovery.md  2026-05-29-m2-fts-lexical.md  2026-05-29-m3-treesitter-symbols.md  2026-05-29-m4-hybrid-search.md  2026-05-29-m5-graph-impact.md  2026-05-29-m6-embeddings-vector.md  2026-05-29-m7-5-plugin-one-command-install.md  2026-05-29-m7-skill-packaging.md  2026-05-29-m8-hooks-watch.md  2026-05-29-m9-release.md  2026-05-29-multilang-symbols-make-skill-win.md  2026-06-24-multilang-scale-benchmark.md  2026-06-24-snippet-skeletonization.md
docs/superpowers/specs/: 2026-05-29-incremental-update-correctness-design.md  2026-05-29-plugin-one-command-install-design.md  2026-06-14-typed-framework-edges-design.md  2026-06-24-multilang-scale-benchmark-design.md  2026-06-24-snippet-skeletonization-design.md
examples/: config.example.json  queries.md  sample-queries.md  sample-retrieval-output.md
examples/demo-project/: README.md
examples/hooks/: settings.json
hooks/: hooks.json
lib/: common.ps1  common.sh
scripts/: bootstrap.ps1  bootstrap.sh  gen_assets.py  release_smoke.py  sync_skill_copies.py
skill/: SKILL.md
skill/examples/: basic-usage.md  claude-md-example.md  hooks-example.json
skill/scripts/: bootstrap.py  cbx  cbx.ps1  doctor.py  install.py  smoke_test.py
skills/codebase-index/: SKILL.md
src/codebase_index/: __init__.py  cli.py  config.py  doctor.py  models.py  scaffold.py  service.py  skill_update.py
src/codebase_index/discovery/: __init__.py  classify.py  ignore.py  walker.py
src/codebase_index/embeddings/: __init__.py  backend.py  external.py  local.py  noop.py
src/codebase_index/graph/: __init__.py  analysis.py  builder.py  expand.py  export.py  navigate.py
src/codebase_index/indexer/: __init__.py  doc_chunks.py  freshness.py  pipeline.py
src/codebase_index/mcp/: __init__.py  server.py
src/codebase_index/output/: __init__.py  json.py  markdown.py  redact.py
src/codebase_index/parsers/: __init__.py  base.py  languages.py  line_chunker.py  symbol_chunks.py  treesitter.py
tests/: benchmark_honest.py  benchmark_honest_RESULTS.md  benchmark_honest_newtowny.txt  benchmark_public.py  benchmark_public_RESULTS.md  benchmark_real_repo.py  conftest.py  golden_utils.py  test_analysis.py  test_benchmark_comparison.py  test_bootstrap.py  test_budget.py  test_chunker.py  test_classify.py  test_clean_cli.py  test_cli.py  test_cli_golden.py  test_config.py  test_discovery.py  test_doc_chunks.py  test_doctor.py  test_embeddings_backend.py  test_embeddings_external.py  test_embeddings_local.py  test_freshness.py  test_fusion.py  test_graph.py  test_graph_coverage.py  test_graph_export_cli.py  test_hooks_merge.py  test_hybrid_ranking.py  test_ignore.py  test_impact_cli.py  test_index_cli.py  test_init_cli.py  test_intent.py  test_languages.py  test_mcp_golden.py  test_mcp_server.py  test_multilang_symbols.py  (+35 more)
tests/fixtures/: README.md  expected_answers.yml
tests/golden/: architecture.json  describe_refresh.json  explain_auth.json  impact_user_model.json  mcp_architecture.json  mcp_describe_symbol.json  mcp_explain_code.json  mcp_find_refs.json  mcp_find_symbol.json  mcp_healthcheck.json  mcp_impact_of.json  mcp_index_stats.json  mcp_path_between.json  mcp_search_code.json  path_renew_to_token.json  refs_refresh_access_token.json  search_token.json  stats.json  symbol_user.json
tests/installer/: smoke.ps1  smoke.sh
(+31 files in other folders)
