[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codebase-index"
version = "0.1.0"
description = "Local-first hybrid codebase index for Claude Code, exposed as a Skill + CLI."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "codebase-index contributors" }]
keywords = ["claude-code", "code-search", "tree-sitter", "rag", "sqlite", "fts5"]

# Core deps are intentionally small and pure-local. No network libs in the base install.
dependencies = [
    "typer>=0.12",            # CLI framework
    "rich>=13.0",             # pretty terminal output (humans only; --json stays plain)
    "pydantic>=2.6",          # config + result schemas
    "pathspec>=0.12",         # .gitignore-style matching for ignore files
    "tree-sitter>=0.21",      # AST parsing core
    "tree-sitter-language-pack>=0.2",  # bundled grammars for many languages
]

[project.optional-dependencies]
# Optional, OPT-IN vector backend. Never installed/used unless the user enables it.
embeddings = [
    "numpy>=1.26",
    "sqlite-vec>=0.1",        # vector search as a SQLite extension (stays local)
]
embeddings-local = [
    "sentence-transformers>=3.0",  # local model, still no external API
]
watch = ["watchdog>=4.0"]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.5", "mypy>=1.10"]

[project.scripts]
codebase-index = "codebase_index.cli:app"
cbx = "codebase_index.cli:app"           # short alias

[project.urls]
Homepage = "https://github.com/your-org/codebase-index"
Documentation = "https://github.com/your-org/codebase-index/tree/main/docs"

[tool.hatch.build.targets.wheel]
packages = ["src/codebase_index"]
# Ship the skill template + scripts inside the wheel so `init` can materialize them.
artifacts = ["src/codebase_index/skill_template/**"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
