[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codebase-index"
version = "0.1.0"
description = "Local-first hybrid codebase index for Claude Code, exposed as a Skill + CLI."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "codebase-index contributors" }]
keywords = ["claude-code", "code-search", "tree-sitter", "rag", "sqlite", "fts5"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Text Processing :: Indexing",
]

# Core deps are intentionally small and pure-local. No network libs in the base install.
dependencies = [
    "typer>=0.12",            # CLI framework
    "rich>=13.0",             # pretty terminal output (humans only; --json stays plain)
    "pydantic>=2.6",          # config + result schemas
    "pathspec>=0.12",         # .gitignore-style matching for ignore files
    "tree-sitter>=0.21",      # AST parsing core
    "tree-sitter-language-pack>=0.2",  # bundled grammars for many languages
]

[project.optional-dependencies]
# Optional, OPT-IN vector backend. Never installed/used unless the user enables it.
embeddings = [
    "numpy>=1.26",
    "sqlite-vec>=0.1",        # vector search as a SQLite extension (stays local)
]
embeddings-local = [
    "sentence-transformers>=3.0",  # local model, still no external API
]
watch = ["watchdog>=4.0"]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.5", "mypy>=1.10", "pyyaml>=6.0"]
build = ["build>=1.2", "twine>=5.0"]

[project.scripts]
codebase-index = "codebase_index.cli:app"
cbx = "codebase_index.cli:app"           # short alias

[project.urls]
Homepage = "https://github.com/denfry/codebase-index"
Documentation = "https://github.com/denfry/codebase-index/tree/main/docs"
Changelog = "https://github.com/denfry/codebase-index/blob/main/CHANGELOG.md"
Issues = "https://github.com/denfry/codebase-index/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/codebase_index"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
